--- a/templates/template/index.jade
+++ b/templates/template/index.jade
@@ -1,1 +1,22 @@
-<h1>这个是JADE的模板template</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>Examples</title>
+<meta name="description" content="">
+<meta name="keywords" content="">
+<link href="" rel="stylesheet">
+</head>
+<body>
+<h2>这里使用模板JADE输出#{title}</h2>
+<p>!{xss}</p>
+<textarea name="name" row="8" cols="80" id="txt">
+</textarea>
+<button id="btn" value="">评论</button>
+<button id="getComm">获取评论</button>
+<script type="text/javascript" src="https://mat1.gtimg.com/www/mobi/js/zepto.min.js">
+</script>
+<script type="text/javascript" src="/index.js"></script>
+</body>
+</html>
